issues fixed! navbar overlapping modall

--- a/style.css
+++ b/style.css
@@ -545,7 +545,7 @@ body.dark-mode .project-info {
 .modall {
   display: none;
   position: fixed;
-  z-index: 999;
+  z-index: 1050;
   left: 0;
   top: 0;
   width: 100%;
